INT-fix-39a12.3: Retreat to jQueryUI 1.8.7 due GREAT incompatibility of most recent version with code on login page. Also misc fixes

--- a/design/css/global.css
+++ b/design/css/global.css
@@ -708,3 +708,11 @@ th.c_j, td.c_j
   margin: 0;
   padding: 0;
 }
+
+.ui-textfield {
+  font: inherit;
+  color: inherit;
+  /* text-align: inherit;*/
+  outline: none;
+  text-align: left;
+}
