--- a/design/templates/OpenGame/ali_members.tpl.html
+++ b/design/templates/OpenGame/ali_members.tpl.html
@@ -41,7 +41,7 @@
         <th>
           <!-- IF member.SHOW_KICK -->
             <a href="alliance.php?mode=admin&edit=members&kick={member.USER_ID}" alt="{L_ali_adm_kick}" title="{L_ali_adm_kick}"
-              onclick="javascript:return confirm('{L_ali_adm_kick_confirm}');"><img src="{dpath}pic/abort.gif" border=0 ></a>
+              onclick="return confirm('{L_ali_adm_kick_confirm}');"><img src="{dpath}pic/abort.gif" border=0 ></a>
           <!-- ELSE -->
             &nbsp;
           <!-- ENDIF -->
