--- a/design/templates/OpenGame/jumpgate.tpl.html
+++ b/design/templates/OpenGame/jumpgate.tpl.html
@@ -61,8 +61,8 @@ function max_fleet()
     <tr>
       <th class="c_c" colspan="2"><input value="{L_gate_jump_btn}" type="submit"></th>
       <th class="c_c">
-        <div class="fl"><input type="button" value="{L_fl_unselectall}" onclick="javascript:zero_fleet();"></div>
-        <div class="fr"><input type="button" value="{L_fl_selectall}" onclick="javascript:max_fleet();"></div>
+        <div class="fl"><input type="button" value="{L_fl_unselectall}" onclick="zero_fleet();"></div>
+        <div class="fr"><input type="button" value="{L_fl_selectall}" onclick="max_fleet();"></div>
       </th>
     </tr>
   </tbody></table>
