--- a/design/templates/OpenGame/msg_message_compose.tpl.html
+++ b/design/templates/OpenGame/msg_message_compose.tpl.html
@@ -21,7 +21,7 @@
     </tr>
 
     <tr>
-      <td class="c_c" colspan="2"><textarea name="text" cols="40" rows="10" size="100" onkeyup="javascript:cntchar(5000)">{TEXT}</textarea></td>
+      <td class="c_c" colspan="2"><textarea name="text" cols="40" rows="10" size="100" onkeyup="cntchar(5000)">{TEXT}</textarea></td>
     </tr>
     
     <tr>
