--- a/design/templates/OpenGame/ali_admin.tpl.html
+++ b/design/templates/OpenGame/ali_admin.tpl.html
@@ -44,7 +44,7 @@
       <th><a href="alliance.php?mode=admin&edit=ally&t=3">{L_Request_text}</a></th>
     </tr>
     <tr><td class=c colspan=3>{request_type} (<span id="cntChars">0</span> / 5000)</td></tr>
-    <tr><th colspan=3><textarea name="text" cols=70 rows=15 onkeyup="javascript:cntchar(5000)">{text}</textarea></th></tr>
+    <tr><th colspan=3><textarea name="text" cols=70 rows=15 onkeyup="cntchar(5000)">{text}</textarea></th></tr>
     <tr>
       <th colspan=3>
         <input type="hidden" name="t" value="{t}">
