--- a/design/templates/OpenGame/fleet2.tpl.html
+++ b/design/templates/OpenGame/fleet2.tpl.html
@@ -29,12 +29,12 @@ var fleet_slide_changing = false;
   <input type="hidden" name="speedallsmin"    value="{speedallsmin}" />
   <input type="hidden" name="speedfactor"     value="{speedfactor}" />
 
-  <table border="0" cellpadding="0" cellspacing="0">
-    <tr><td class="c" colspan="2">{fl_mission}</td></tr>
+  <table>
+    <!--<tr><td class="c" colspan="2">{fl_mission}</td></tr>-->
 
     <!-- BEGIN missions -->
       <tr><th nowrap><div align=left>
-        <input id="target_mission{missions.ID}" type="radio" name="target_mission" class="frameless" value="{missions.ID}" <!-- IF missions.CHECKED -->checked <!-- ENDIF --> onChange="javascript:changeMission(this);" onClick="javascript:changeMission(this);">
+        <input id="target_mission{missions.ID}" type="radio" name="target_mission" class="frameless" value="{missions.ID}" onChange="changeMission(this);" onClick="changeMission(this);" <!-- IF missions.CHECKED -->checked <!-- ENDIF -->>
         <label for="target_mission{missions.ID}">{missions.NAME}</label>
         <!-- IF missions.ID == 5 || missions.ID == 15 -->
           <!-- IF MAX_DURATION -->
@@ -74,7 +74,7 @@ var fleet_slide_changing = false;
 <br />
 
   <!-- IF IS_TRANSPORT_MISSIONS -->
-  <table id="resTable" border="0" cellpadding="0" cellspacing="0" style="display: none;"><tbody>
+  <table id="resTable" style="display: none;"><tbody>
     <tr class="c_c">
       <th>{L_sys_resources}</th>
       <th>{L_fl_on_stores}</th>
@@ -94,17 +94,13 @@ var fleet_slide_changing = false;
             });
 
             jQuery('#resource{resources.ID}slide').bind('slide slidechange', function(event, ui) {
-              if(fleet_slide_changing)
-              {
+              if(fleet_slide_changing) {
                 return;
-              }
-              else
-              {
+              } else {
                 fleet_slide_changing = true;
               }
               var transportCapacity = fleet_capacity - check_resource(0) - check_resource(1) - check_resource(2);
-              for(i = 0; i < 3; i++)
-              {
+              for(i = 0; i < 3; i++) {
                 jQuery('#resource' + i + 'slide').slider("option", "max", Math.min(jQuery('#resource' + i + 'slide').slider("value") + transportCapacity, resource_max[i]));
                 jQuery('#resource' + i).keyup();
               }
@@ -119,13 +115,14 @@ var fleet_slide_changing = false;
     <tr>
       <th colspan="2" class="c_l">{L_fl_space_left}</th>
       <th class="c_c">
-        <div class="fl"><input type="button" onclick="javascript:zero_resources()" value="{L_fl_none_resources}"></div>
-        <div class="fr"><input type="button" onclick="javascript:max_resources()" value="{L_fl_allressources}"></div>
+        <div class="fl"><input type="button" onclick="zero_resources()" value="{L_fl_none_resources}"></div>
+        <div class="fr"><input type="button" onclick="max_resources()" value="{L_fl_allressources}"></div>
       </th>
       <th id="remainingresources" class="c_r">-</th>
     </tr>
   </tbody></table>
   <!-- ENDIF -->
+
 </form>
 
 <script type="text/javascript"><!--
