--- a/design/templates/OpenGame/options.tpl.html
+++ b/design/templates/OpenGame/options.tpl.html
@@ -25,7 +25,7 @@
           <!-- IF ADM_PROTECT_PLANETS -->
         <tr class="c_c">
           <th><label for="adm_pl_prot">{L_opt_adm_planet_prot}</label></th>
-          <th><input name="adm_pl_prot" <!-- IF adm_pl_prot -->checked<!-- ENDIF --> type="checkbox" id="adm_pl_prot" /></th>
+          <th><input name="adm_pl_prot" type="checkbox" id="adm_pl_prot" <!-- IF adm_pl_prot -->checked<!-- ENDIF --> /></th>
         </tr>
         <!-- ENDIF -->
 
@@ -37,7 +37,7 @@
           <th width=330>
             <!-- IF SERVER_NAME_CHANGE -->
               {L_username_old} <span class="ok">{opt_usern_data}</span><br />
-              {L_username_new} <input name="username" value="{opt_usern_data}" maxlength="32" size="32" <!-- IF ! SERVER_NAME_CHANGE_ENABLED -->disabled<!-- ENDIF -->><br />
+              {L_username_new} <input type="text" name="username" value="{opt_usern_data}" maxlength="32" size="32" <!-- IF ! SERVER_NAME_CHANGE_ENABLED -->disabled<!-- ENDIF -->><br />
               <input type="checkbox" name="username_confirm" id="username_confirm" value="1" <!-- IF ! SERVER_NAME_CHANGE_ENABLED -->disabled<!-- ENDIF -->> <label for="username_confirm">{L_username_change_confirm}</label>
               <!-- IF SERVER_NAME_CHANGE_PAY -->
                 {L_username_change_confirm_payed} {DARK_MATTER} {L_sys_dark_matter_sh}
