--- a/design/templates/OpenGame/simulator.tpl.html
+++ b/design/templates/OpenGame/simulator.tpl.html
@@ -36,44 +36,75 @@ function sym_set_all(group, value)
 <h2>{COE_combatSimulator}</h2>
 <form action='simulator.php' method='post'>
 {L_ube_simulation} <input type="checkbox" name="simulator" checked="true" />
-Проверка записи/чтения <input type="checkbox" name="reload" />
-  <table>
-    <tr>
-      <td class="c">&nbsp;</td>
-      <td class="c">{L_sys_attacker}</td>
-      <td class="c">{L_sys_defender}</td>
+<!--Проверка записи/чтения <input type="checkbox" name="reload" />-->
+  <table >
+<!--
+    <tr class="c_c">
+      <th>&nbsp;</th>
+      <th colspan="3">{L_sys_attacker}</th>
+      <th>{L_sys_defender}</th>
     </tr>
+-->
 
     <!-- BEGIN simulator -->
-    <tr>
+    <tr class="c_c">
       <!-- IF simulator.ID -->
-        <th>{simulator.NAME}</th>
-        <th>
+        <td>{simulator.NAME}</td>
           <!-- IF simulator.GROUP != UNIT_DEFENCE && simulator.GROUP != UNIT_GOVERNORS -->
-            <span class="fl"><input type="button" class="button" tabindex=-1 value="0" onclick="sym_set({simulator.ID});"></span>
-            <span class="fl">&nbsp;&nbsp;<input type='text' tabindex=1{simulator.NUM} group="attacker{simulator.ID}" id="attacker{simulator.ID}" name='attacker[{simulator.ID}]' value='{simulator.ATTACKER}'>&nbsp;&nbsp;</span>
-            <span class="fr"><input type="button" class="button" tabindex=-1 value="{L_sys_max}" onclick="sym_set({simulator.ID}, 1);"></span>
+<!--
+            <td colspan="3">
+              <table class="markup"><tr>
+-->
+                <td>
+                  <input style="height: 24px; width: 24px" type="button" class="button" tabindex=-1 value="0" onclick="sym_set({simulator.ID});">
+                </td>
+                <td>
+                  <input type='text' tabindex=1{simulator.NUM} group="attacker{simulator.ID}" id="attacker{simulator.ID}" name='attacker[{simulator.ID}]' value='{simulator.ATTACKER}' />
+                </td>
+                <td>
+                  <input style="height: 24px;" type="button" class="button" tabindex=-1 value="{L_sys_max}" onclick="sym_set({simulator.ID}, 1);">
+<!--
+                </td>
+              </tr></table>
+-->
+            </td>
           <!-- ELSE -->
-            &nbsp;
+            <td colspan="3">
+              &nbsp;
+            </td>
           <!-- ENDIF -->
-        </th>
-        <th><input type='text' tabindex=2{simulator.NUM} name='defender[{simulator.ID}]' value='{simulator.DEFENDER}'></th>
+        <td>
+          <input type='text' tabindex=2{simulator.NUM} name='defender[{simulator.ID}]' value='{simulator.DEFENDER}'>
+        </td>
       <!-- ELSE -->
-        <!-- IF simulator.GROUP != UNIT_DEFENCE -->
-          <td class=c>{simulator.NAME}</td>
-          <td class=c>
-            <span class="fl"><input type="button" class="button" tabindex=-1 value="0" onclick="sym_set_all({simulator.GROUP})"></span>
-            <span class="fr"><input type="button" class="button" tabindex=-1 value="{L_sys_max}" onclick="sym_set_all({simulator.GROUP}, true)">&nbsp;</span>
-          </td>
-          <td class=c>&nbsp;</td>
+        <!-- IF simulator.GROUP != UNIT_DEFENCE && simulator.GROUP != UNIT_GOVERNORS -->
+          <th>{simulator.NAME}</th>
+<!--
+          <th colspan="3">
+            <table class="markup"><tr>
+-->
+              <th>
+                <input style="height: 24px; width: 24px" type="button" class="button" tabindex=-1 value="0" onclick="sym_set_all({simulator.GROUP})" />
+              </th>
+              <th>{L_sys_attacker}</th>
+              <th>
+                <input style="height: 24px;" type="button" class="button" tabindex=-1 value="{L_sys_max}" onclick="sym_set_all({simulator.GROUP}, true)">
+              </th>
+<!--
+            </tr></table>
+          </th>
+-->
+          <th class=c>{L_sys_defender}</th>
         <!-- ELSE -->
-          <td class=c colspan=3>{simulator.NAME}</td>
+          <th>{simulator.NAME}</th>
+          <th colspan="3">&nbsp;</th>
+          <th>{L_sys_defender}</th>
         <!-- ENDIF -->
       <!-- ENDIF -->
     </tr>
     <!-- END simulator -->
 
-    <tr><th colspan='3'><input type='submit' class="button" name='submit' value='{L_COE_simulate}'></th></tr>
+    <tr class="c_c"><th colspan='5'><input type='submit' class="button" name='submit' value='{L_COE_simulate}'></th></tr>
   </table>
   <input type='hidden' name='BE_DEBUG' value="{BE_DEBUG}">
 </form>
